--- a/Chatbot/dollos/assets/css/shortcut.css
+++ b/Chatbot/dollos/assets/css/shortcut.css
@@ -1,3 +1,14 @@
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.center-item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* display */
 .d-flex {
   display: flex;
@@ -11,6 +22,11 @@
 .d-flex-vertical {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.d-flex-around {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 .d-flex-only {
