--- a/Profoli/public_html/assets/css/shortcut.css
+++ b/Profoli/public_html/assets/css/shortcut.css
@@ -1,4 +1,32 @@
+/* opacity */
+.opacity--1 { opacity: .1 }
+.opacity--2 { opacity: .2 }
+.opacity--3 { opacity: .3 }
+.opacity--4 { opacity: .4 }
+.opacity--5 { opacity: .5 }
+.opacity--6 { opacity: .6 }
+.opacity--7 { opacity: .7 }
+.opacity--8 { opacity: .8 }
+.opacity--9 { opacity: .9 }
+.opacity-1 { opacity: 1 }
+
+
+.scale-on-hover:hover { transform: scale(1.2); }
+.cursor-hover:hover { cursor: pointer; }
+.cursor-no-effect { pointer-events: none; }
 .teks-center { text-align: center }
+.image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.image img {
+    widows: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* position */
 .pos-rel { position: relative }
@@ -27,6 +55,11 @@
     max-width: 90%;
     margin: 0 auto;
 }
+.w500-responsif {
+    width: 500px;
+    max-width: 95%;
+    margin: 0 auto;
+}
 
 /* margin */
 .mrl-s { margin: 0 8px }
@@ -41,6 +74,12 @@
 .mt-s { margin-top: 5px }
 .mt-l { margin-top: 10px }
 .mt-m { margin-top: 15px }
+.mb-s { margin-bottom: 5px }
+.mb-l { margin-bottom: 10px }
+.mb-m { margin-bottom: 15px }
+.push-top-s { margin-top: 25px }
+.push-top-l { margin-top: 50px }
+.push-top-m { margin-top: 75px }
 
 /* padding */
 .p-top-btm-s { padding: 50px 0; }
